# afsk

./: .gitignore  CMakeLists.txt  main.cpp  paradox_challenge.sln
Debug/: paradox_challenge.ilk  test_app.bat
includes/: AudioFile.h  DataExtractor.h
paradox_challenge/: DataExtractor.cpp  DataExtractor.h  paradox_challenge.cpp  paradox_challenge.vcxproj  paradox_challenge.vcxproj.filters
paradox_challenge/Debug/: dataextractor.obj.enc  paradox_challenge.obj.enc  vc141.idb
paradox_challenge/Debug/paradox_.FE763B97.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  paradox_challenge.lastbuildstate
src/: DataExtractor.cpp
