CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED true)

PROJECT(afsk VERSION 1.0)

SET(SOURCES main.cpp src/DataExtractor.cpp includes/AudioFile.h includes/DataExtractor.h)

FILE(GLOB_RECURSE SAMPLE_FILES  "sample_files/*.wav")
FILE(COPY ${SAMPLE_FILES} DESTINATION ${CMAKE_BINARY_DIR})

ADD_EXECUTABLE(afsk ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(afsk PRIVATE "includes/")
